# daeisy-shield

./: .gitmodules
Hardware/daisy_shiaeld/: bread_board_layout.diy  cv_ctrl_input.cddx  cv_output_circuit.cddx  gate_trigger_input_circuit.cddx  seed_audio_input_circuit.cddx  seed_audio_output_circuit.cddx  seed_gate_in.cddx
Hardware/easyeda/online_projects_backup/: how to recover online project backup.txt  projects_list.json
Hardware/easyeda/online_projects_backup/f9c25747d9f84338ba6a65feac9fef52/sch/: Sheet_1.json
common/: Makefile
exam/: Makefile  engine.cpp  engine.h  main.cpp
exam/hw/: daeisy_shield.cpp  daeisy_shield.h
resonate/: Makefile  README.md  engine.cpp  engine.h  main.cpp
resonate/hw/: daeisy_shield.h
resonate/pd-test/: CMakeLists.txt  ResonatorWrapper.h  resonator~.c
wtf-osc/: Makefile
wtf-osc/pd-test/: CMakeLists.txt  WtfoscWrapper.h  wtfosc_wrapper.h  wtfosc~.c
wtf-osc/src/: main.cpp
wtf-osc/src/ctrl/: ControlRamp.h
wtf-osc/src/dsp/: WTFOscillator.cpp  WTFOscillator.h  WTFWindow.h
wtf-osc/src/hw/: daeisy_shield.cpp
